@@ -1,30 +1,25 @@
 package org.opentripplanner.routing.algorithm.mapping;
 
-import static org.opentripplanner.routing.algorithm.raptor.transit.cost.RaptorCostConverter.toOtpDomainCost;
+import static org.opentripplanner.routing.algorithm.raptoradapter.transit.cost.RaptorCostConverter.toOtpDomainCost;
 
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.TimeZone;
-import org.locationtech.jts.geom.Coordinate;
-import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
-import org.opentripplanner.model.StopLocation;
-import org.opentripplanner.model.TripPattern;
-import org.opentripplanner.model.calendar.ServiceDate;
+import org.opentripplanner.common.geometry.GeometryUtils;
+import org.opentripplanner.model.plan.FrequencyTransitLeg;
 import org.opentripplanner.model.plan.Itinerary;
 import org.opentripplanner.model.plan.Leg;
 import org.opentripplanner.model.plan.Place;
-import org.opentripplanner.model.plan.StopArrival;
+import org.opentripplanner.model.plan.ScheduledTransitLeg;
+import org.opentripplanner.model.plan.StreetLeg;
 import org.opentripplanner.model.transfer.ConstrainedTransfer;
-import org.opentripplanner.routing.algorithm.raptor.transit.AccessEgress;
-import org.opentripplanner.routing.algorithm.raptor.transit.Transfer;
-import org.opentripplanner.routing.algorithm.raptor.transit.TransitLayer;
-import org.opentripplanner.routing.algorithm.raptor.transit.TripSchedule;
-import org.opentripplanner.routing.algorithm.raptor.transit.request.TransferWithDuration;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.AccessEgress;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.Transfer;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.TransitLayer;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.TripSchedule;
+import org.opentripplanner.routing.algorithm.raptoradapter.transit.request.TransferWithDuration;
 import org.opentripplanner.routing.algorithm.transferoptimization.api.OptimizedPath;
 import org.opentripplanner.routing.api.request.RoutingRequest;
 import org.opentripplanner.routing.api.request.StreetMode;
@@ -35,14 +30,12 @@ import org.opentripplanner.routing.graph.Edge;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graph.Vertex;
 import org.opentripplanner.routing.spt.GraphPath;
-import org.opentripplanner.routing.trippattern.TripTimes;
 import org.opentripplanner.transit.raptor.api.path.AccessPathLeg;
 import org.opentripplanner.transit.raptor.api.path.EgressPathLeg;
 import org.opentripplanner.transit.raptor.api.path.Path;
 import org.opentripplanner.transit.raptor.api.path.PathLeg;
 import org.opentripplanner.transit.raptor.api.path.TransferPathLeg;
 import org.opentripplanner.transit.raptor.api.path.TransitPathLeg;
-import org.opentripplanner.util.PolylineEncoder;
 
 /**
  * This maps the paths found by the Raptor search algorithm to the itinerary structure currently used by OTP. The paths,
@@ -58,36 +51,35 @@ public class RaptorPathToItineraryMapper {
 
     private final RoutingRequest request;
 
-    private final ZonedDateTime startOfTime;
+    private final ZonedDateTime transitSearchTimeZero;
 
 
     /**
      * Constructs an itinerary mapper for a request and a set of results
      *
      * @param transitLayer the currently active transit layer (may have real-time data applied)
-     * @param startOfTime the point in time all times in seconds are counted from
+     * @param transitSearchTimeZero the point in time all times in seconds are counted from
      * @param request the current routing request
      */
     public RaptorPathToItineraryMapper(
             Graph graph,
             TransitLayer transitLayer,
-            ZonedDateTime startOfTime,
+            ZonedDateTime transitSearchTimeZero,
             RoutingRequest request
     ) {
 
         this.graph = graph;
         this.transitLayer = transitLayer;
-        this.startOfTime = startOfTime;
+        this.transitSearchTimeZero = transitSearchTimeZero;
         this.request = request;
     }
 
     public Itinerary createItinerary(Path<TripSchedule> path) {
         var optimizedPath = path instanceof OptimizedPath
                 ? (OptimizedPath<TripSchedule>) path : null;
-        List<Leg> legs = new ArrayList<>();
 
         // Map access leg
-        legs.addAll(mapAccessLeg(path.accessLeg()));
+        List<Leg> legs = new ArrayList<>(mapAccessLeg(path.accessLeg()));
 
         PathLeg<TripSchedule> pathLeg = path.accessLeg().nextLeg();
 
@@ -97,9 +89,7 @@ public class RaptorPathToItineraryMapper {
         while (!pathLeg.isEgressLeg()) {
             // Map transit leg
             if (pathLeg.isTransitLeg()) {
-                transitLeg = mapTransitLeg(
-                        request, transitLeg, pathLeg.asTransitLeg(), firstLeg
-                );
+                transitLeg = mapTransitLeg(transitLeg, pathLeg.asTransitLeg(), firstLeg);
                 firstLeg = false;
                 legs.add(transitLeg);
             }
@@ -118,7 +108,6 @@ public class RaptorPathToItineraryMapper {
         EgressPathLeg<TripSchedule> egressPathLeg = pathLeg.asEgressLeg();
         Itinerary mapped = mapEgressLeg(egressPathLeg);
         legs.addAll(mapped == null ? List.of() : mapped.legs);
-        propagateStopPlaceNamesToWalkingLegs(legs);
 
         Itinerary itinerary = new Itinerary(legs);
 
@@ -127,7 +116,7 @@ public class RaptorPathToItineraryMapper {
         itinerary.arrivedAtDestinationWithRentedVehicle = mapped != null && mapped.arrivedAtDestinationWithRentedVehicle;
 
         if(optimizedPath != null) {
-            itinerary.waitTimeOptimizedCost = toOtpDomainCost(optimizedPath.waitTimeOptimizedCost());
+            itinerary.waitTimeOptimizedCost = toOtpDomainCost(optimizedPath.generalizedCostWaitTimeOptimized());
             itinerary.transferPriorityCost = toOtpDomainCost(optimizedPath.transferPriorityCost());
         }
 
@@ -141,8 +130,7 @@ public class RaptorPathToItineraryMapper {
 
         GraphPath graphPath = new GraphPath(accessPath.getLastState());
 
-        Itinerary subItinerary = GraphPathToItineraryMapper
-            .generateItinerary(graphPath, request.locale);
+        Itinerary subItinerary = GraphPathToItineraryMapper.generateItinerary(graphPath);
 
         if (subItinerary.legs.isEmpty()) { return List.of(); }
 
@@ -152,18 +140,11 @@ public class RaptorPathToItineraryMapper {
     }
 
     private Leg mapTransitLeg(
-            RoutingRequest request,
             Leg prevTransitLeg,
             TransitPathLeg<TripSchedule> pathLeg,
             boolean firstLeg
     ) {
-
-        var boardStop = transitLayer.getStopByIndex(pathLeg.fromStop());
-        var alightStop = transitLayer.getStopByIndex(pathLeg.toStop());
         TripSchedule tripSchedule = pathLeg.trip();
-        TripTimes tripTimes = tripSchedule.getOriginalTripTimes();
-
-        Leg leg = new Leg(tripTimes.getTrip());
 
         // Find stop positions in pattern where this leg boards and alights.
         // We cannot assume every stop appears only once in a pattern, so we
@@ -175,54 +156,43 @@ public class RaptorPathToItineraryMapper {
             pathLeg.toTime(), pathLeg.toStop()
         );
 
-        // Include real-time information in the Leg.
-        if (!tripTimes.isScheduled()) {
-            leg.realTime = true;
-            leg.departureDelay = tripTimes.getDepartureDelay(boardStopIndexInPattern);
-            leg.arrivalDelay = tripTimes.getArrivalDelay(alightStopIndexInPattern);
+        Leg leg;
+        if (tripSchedule.isFrequencyBasedTrip()) {
+            int frequencyHeadwayInSeconds = tripSchedule.frequencyHeadwayInSeconds();
+            leg = new FrequencyTransitLeg(
+                    tripSchedule.getOriginalTripTimes(),
+                    tripSchedule.getOriginalTripPattern(),
+                    boardStopIndexInPattern,
+                    alightStopIndexInPattern,
+                    createCalendar(pathLeg.fromTime() + frequencyHeadwayInSeconds),
+                    createCalendar(pathLeg.toTime()),
+                    tripSchedule.getServiceDate(),
+                    transitSearchTimeZero.getZone().normalized(),
+                    (prevTransitLeg == null ? null : prevTransitLeg.getTransferToNextLeg()),
+                    (ConstrainedTransfer) pathLeg.getConstrainedTransferAfterLeg(),
+                    toOtpDomainCost(pathLeg.generalizedCost()),
+                    frequencyHeadwayInSeconds
+            );
+        } else {
+            leg = new ScheduledTransitLeg(
+                    tripSchedule.getOriginalTripTimes(),
+                    tripSchedule.getOriginalTripPattern(),
+                    boardStopIndexInPattern,
+                    alightStopIndexInPattern,
+                    createCalendar(pathLeg.fromTime()),
+                    createCalendar(pathLeg.toTime()),
+                    tripSchedule.getServiceDate(),
+                    transitSearchTimeZero.getZone().normalized(),
+                    (prevTransitLeg == null ? null : prevTransitLeg.getTransferToNextLeg()),
+                    (ConstrainedTransfer) pathLeg.getConstrainedTransferAfterLeg(),
+                    toOtpDomainCost(pathLeg.generalizedCost())
+            );
         }
-
-        leg.serviceDate = new ServiceDate(tripSchedule.getServiceDate());
-        leg.startTime = createCalendar(pathLeg.fromTime());
-        leg.endTime = createCalendar(pathLeg.toTime());
-        leg.from = mapStopToPlace(boardStop, boardStopIndexInPattern, tripTimes);
-        leg.to = mapStopToPlace(alightStop, alightStopIndexInPattern, tripTimes);
-        List<Coordinate> transitLegCoordinates = extractTransitLegCoordinates(pathLeg, boardStopIndexInPattern, alightStopIndexInPattern);
-        leg.legGeometry = PolylineEncoder.createEncodings(transitLegCoordinates);
-        leg.distanceMeters = getDistanceFromCoordinates(transitLegCoordinates);
-
-        // intermediate stops are required for fare calculation that's why we always add them here
-        // and remove them in the API layers after the fare calculation if they were not requested.
-        leg.intermediateStops = extractIntermediateStops(pathLeg, boardStopIndexInPattern, alightStopIndexInPattern);
-
-        leg.headsign = tripTimes.getHeadsign(boardStopIndexInPattern);
-        leg.walkSteps = new ArrayList<>();
-        leg.generalizedCost = toOtpDomainCost(pathLeg.generalizedCost());
-
-        leg.dropOffBookingInfo = tripTimes.getDropOffBookingInfo(boardStopIndexInPattern);
-        leg.pickupBookingInfo = tripTimes.getPickupBookingInfo(boardStopIndexInPattern);
-
-        leg.transferToNextLeg = (ConstrainedTransfer) pathLeg.getConstrainedTransferAfterLeg();
-        leg.transferFromPrevLeg = prevTransitLeg == null ? null : prevTransitLeg.transferToNextLeg;
-
-        // TODO OTP2 - alightRule and boardRule needs mapping
-        //    Under Raptor, for transit trips, ItineraryMapper converts Path<TripSchedule> directly to Itinerary
-        //    (the old API response element, within TripPlan). Non-transit trips still use GraphPathToTripPlanConverter
-        //    to turn A* results (sequences of States and Edges called GraphPaths) into TripPlans which also contain
-        //    Itineraries.
-        //    So transit results do not go through GraphPathToTripPlanConverter. It contains logic to find board/alight
-        //    rules from StopPatterns within TripPatterns, and attach them as machine-readable codes on Legs, but only
-        //    where you are really boarding or alighting (considering interlining / in-seat transfers).
-        //    That needs to be re-implemented for the Raptor transit case.
-        //    - See e2118e0a -> GraphPathToTripPlanConverter#fixupLegs(List<Leg>, State[][]))
-        // leg.alightRule = <Assign here>;
-        // leg.boardRule =  <Assign here>;
 
         AlertToLegMapper.addTransitAlertPatchesToLeg(
             graph,
             leg,
-            firstLeg,
-            request.locale
+            firstLeg
         );
 
         return leg;
@@ -233,8 +203,8 @@ public class RaptorPathToItineraryMapper {
         var transferToStop = transitLayer.getStopByIndex(pathLeg.toStop());
         Transfer transfer = ((TransferWithDuration) pathLeg.transfer()).transfer();
 
-        Place from = Place.forStop(transferFromStop, null, null, request.locale);
-        Place to = Place.forStop(transferToStop, null, null, request.locale);
+        Place from = Place.forStop(transferFromStop);
+        Place to = Place.forStop(transferToStop);
         return mapNonTransitLeg(pathLeg, transfer, transferMode, from, to);
     }
 
@@ -245,8 +215,7 @@ public class RaptorPathToItineraryMapper {
 
         GraphPath graphPath = new GraphPath(egressPath.getLastState());
 
-        Itinerary subItinerary = GraphPathToItineraryMapper
-            .generateItinerary(graphPath, request.locale);
+        Itinerary subItinerary = GraphPathToItineraryMapper.generateItinerary(graphPath);
 
         if (subItinerary.legs.isEmpty()) { return null; }
 
@@ -264,17 +233,17 @@ public class RaptorPathToItineraryMapper {
     ) {
         List<Edge> edges = transfer.getEdges();
         if (edges == null || edges.isEmpty()) {
-            Leg leg = new Leg(transferMode);
-            leg.from = from;
-            leg.to = to;
-            leg.startTime = createCalendar(pathLeg.fromTime());
-            leg.endTime = createCalendar(pathLeg.toTime());
-            leg.legGeometry = PolylineEncoder.createEncodings(transfer.getCoordinates());
-            leg.distanceMeters = (double) transfer.getDistanceMeters();
-            leg.walkSteps = Collections.emptyList();
-            leg.generalizedCost = toOtpDomainCost(pathLeg.generalizedCost());
-
-            return List.of(leg);
+            return List.of(new StreetLeg(
+                    transferMode,
+                    createCalendar(pathLeg.fromTime()),
+                    createCalendar(pathLeg.toTime()),
+                    from,
+                    to,
+                    (double) transfer.getDistanceMeters(),
+                    toOtpDomainCost(pathLeg.generalizedCost()),
+                    GeometryUtils.makeLineString(transfer.getCoordinates()),
+                    List.of()
+            ));
         } else {
             // A RoutingRequest with a RoutingContext must be constructed so that the edges
             // may be re-traversed to create the leg(s) from the list of edges.
@@ -296,8 +265,7 @@ public class RaptorPathToItineraryMapper {
                 State[] states = transferStates.toArray(new State[0]);
                 GraphPath graphPath = new GraphPath(states[states.length - 1]);
 
-                Itinerary subItinerary = GraphPathToItineraryMapper
-                        .generateItinerary(graphPath, request.locale);
+                Itinerary subItinerary = GraphPathToItineraryMapper.generateItinerary(graphPath);
 
                 if (subItinerary.legs.isEmpty()) {
                     return List.of();
@@ -308,75 +276,10 @@ public class RaptorPathToItineraryMapper {
         }
     }
 
-    /**
-     * Fix up a {@link Place} using the information available at the leg boundaries. This method
-     * will ensure that stop names propagate correctly to the non-transit legs that connect to
-     * transit legs.
-     */
-    public static void propagateStopPlaceNamesToWalkingLegs(List<Leg> legs) {
-        for (int i = 0; i < legs.size()-1; i++) {
-            Leg currLeg = legs.get(i);
-            Leg nextLeg = legs.get(i + 1);
-
-            if (currLeg.isTransitLeg() && !nextLeg.isTransitLeg()) {
-                nextLeg.from = currLeg.to;
-            }
-
-            if (!currLeg.isTransitLeg() && nextLeg.isTransitLeg()) {
-                currLeg.to = nextLeg.from;
-            }
-        }
-    }
-
-    /**
-     * Maps stops for transit legs.
-     */
-    private Place mapStopToPlace(StopLocation stop, Integer stopIndex, TripTimes tripTimes) {
-        return Place.forStop(stop, stopIndex, tripTimes.getOriginalGtfsStopSequence(stopIndex), request.locale);
-    }
-
     private Calendar createCalendar(int timeInSeconds) {
-        ZonedDateTime zdt = startOfTime.plusSeconds(timeInSeconds);
+        ZonedDateTime zdt = transitSearchTimeZero.plusSeconds(timeInSeconds);
         Calendar c = Calendar.getInstance(TimeZone.getTimeZone(zdt.getZone()));
         c.setTimeInMillis(zdt.toInstant().toEpochMilli());
         return c;
-    }
-
-    private List<StopArrival> extractIntermediateStops(TransitPathLeg<TripSchedule> pathLeg, int boardStopIndexInPattern, int alightStopIndexInPattern) {
-        List<StopArrival> visits = new ArrayList<>();
-        TripPattern tripPattern = pathLeg.trip().getOriginalTripPattern();
-        TripSchedule tripSchedule = pathLeg.trip();
-
-        for (int i = boardStopIndexInPattern + 1; i < alightStopIndexInPattern; i++) {
-            var stop = tripPattern.getStopPattern().getStops()[i];
-
-            Place place = mapStopToPlace(stop, i, tripSchedule.getOriginalTripTimes());
-            StopArrival visit = new StopArrival(
-                place,
-                createCalendar(tripSchedule.arrival(i)),
-                createCalendar(tripSchedule.departure(i))
-            );
-            visits.add(visit);
-        }
-        return visits;
-    }
-
-    private List<Coordinate> extractTransitLegCoordinates(TransitPathLeg<TripSchedule> pathLeg, int boardStopIndexInPattern, int alightStopIndexInPattern) {
-        List<Coordinate> transitLegCoordinates = new ArrayList<>();
-        TripPattern tripPattern = pathLeg.trip().getOriginalTripPattern();
-
-        for (int i = boardStopIndexInPattern + 1; i <= alightStopIndexInPattern; i++) {
-            transitLegCoordinates.addAll(Arrays.asList(tripPattern.getHopGeometry(i - 1).getCoordinates()));
-        }
-
-        return transitLegCoordinates;
-    }
-
-    private double getDistanceFromCoordinates(List<Coordinate> coordinates) {
-        double distance = 0;
-        for (int i = 1; i < coordinates.size(); i++) {
-            distance += SphericalDistanceLibrary.distance(coordinates.get(i), coordinates.get(i - 1));
-        }
-        return distance;
     }
 }
